# auto-intersphinx

./: .flake8  .pre-commit-config.yaml  README.md  data.json  pyproject.toml
.github/workflows/: deploy.yml  deploy_pypi.yml  doc-preview.yaml  doc-preview.yml  tests.yaml  tests.yml
.reuse/: dep5
doc/: api.rst  cli.rst  conf.py  index.rst  install.rst  links.rst  usage.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_62e6215e69884ed7___init___py.html  z_62e6215e69884ed7_catalog_py.html  z_62e6215e69884ed7_check_packages_py.html  z_62e6215e69884ed7_cli_py.html  z_62e6215e69884ed7_dump_objects_py.html  z_62e6215e69884ed7_update_catalog_py.html
src/auto_intersphinx/: __init__.py  catalog.json  catalog.py  check_packages.py  cli.py  dump_objects.py  update_catalog.py
tests/: conftest.py  test_auto_intersphinx.py  test_check_packages.py  test_dump_objects.py  test_update_catalog.py
tests/data/: catalog.json  requirements.txt
