# SPDX-FileCopyrightText: Copyright © 2022 Idiap Research Institute <contact@idiap.ch>
#
# SPDX-License-Identifier: BSD-3-Clause

[build-system]
requires = ["hatchling", "versioningit"]
build-backend = "hatchling.build"

[project]
name = "auto-intersphinx"
dynamic = ["version"]
requires-python = ">=3.10"
description = "Automatic links direct project dependencies to the intersphinx catalog"
readme = "README.md"
license = "BSD-3-Clause"
authors = [{ name = "Andre Anjos", email = "andre.anjos@idiap.ch" }]
classifiers = [
  "Framework :: Sphinx :: Extension",
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["sphinx", "packaging", "requests", "lxml"]

[project.urls]
documentation = "https://auto-intersphinx.readthedocs.io/en/latest/"
homepage = "https://pypi.org/project/auto-intersphinx"
repository = "https://github.com/idiap/auto-intersphinx"
changelog = "https://github.com/idiap/auto-intersphinx/releases"

[project.optional-dependencies]
qa = ["pre-commit", "reuse", "ruff"]
doc = [
  "furo",
  "sphinx-autodoc-typehints",
  "sphinx-copybutton",
  "sphinx-inline-tabs",
  "sphinx-argparse",
]
test = ["pytest", "pytest-cov"]

[project.scripts]
auto-intersphinx = "auto_intersphinx.cli:main"

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64"]

[tool.pixi.system-requirements]
linux = "4.19.0"

[tool.pixi.dependencies]
sphinx = "*"
packaging = "*"
requests = "*"
lxml = "*"

[tool.pixi.pypi-dependencies]
auto-intersphinx = { path = ".", editable = true }

[tool.pixi.feature.py311.dependencies]
python = "~=3.11.0"

[tool.pixi.feature.py312.dependencies]
python = "~=3.12.0"

[tool.pixi.feature.qa.dependencies]
pre-commit = "*"
ruff = "*"
reuse = "*"

[tool.pixi.feature.qa.tasks]
qa-install = "pre-commit install"
qa = { cmd = "pre-commit run --all-files", depends-on = ["qa-install"] }
qa-ci = { cmd = "pre-commit run --all-files --show-diff-on-failure --verbose", depends-on = ["qa-install"] }

[tool.pixi.feature.doc.dependencies]
furo = "*"
sphinx-autodoc-typehints = "*"
sphinx-copybutton = "*"
sphinx-inline-tabs = "*"
sphinx-argparse = "*"

[tool.pixi.feature.doc.tasks]
doc-clean = "rm -rf doc/api && rm -rf html"
doc = "sphinx-build -aEW doc html"
doctest = "sphinx-build -aEb doctest doc html/doctest"

[tool.pixi.feature.test.dependencies]
pytest = "*"
pytest-cov = "*"

[tool.pixi.feature.test.tasks]
test = "pytest -sv tests/"
test-ci = "pytest -sv --cov-branch tests/"

[tool.pixi.feature.dev.dependencies]
pdbpp = "*"
uv = "*"

[tool.pixi.feature.dev.tasks]
update-catalog = "auto-intersphinx update-catalog -vvv --self -o src/auto_intersphinx/catalog.json"

[tool.pixi.environments]
default = { features = ["qa", "doc", "test", "dev", "py312"], solve-group = "default" }
qa = { features = ["qa", "py312"], solve-group = "default" }
test = { features = ["test", "py312"], solve-group = "default" }
doc = { features = ["doc", "py312"], solve-group = "default"}

alternative = { features = ["qa", "doc", "test", "dev", "py311"], solve-group = "alternative" }
test-alternative = { features = ["test", "py311"], solve-group = "alternative" }

[tool.hatch.version]
source = "versioningit"

[tool.versioningit.next-version]
method = "smallest"

[tool.versioningit.format]
# Example formatted version: 1.2.4.dev42+ge174a1f
distance = "{next_version}.dev{distance}+{vcs}{rev}"
# Example formatted version: 1.2.4.dev42+ge174a1f.d20230922
distance-dirty = "{next_version}.dev{distance}+{vcs}{rev}.d{build_date:%Y%m%d}"

[tool.hatch.build.targets.sdist]
include = [
  "src/**/*.py",
  "src/**/*.json",
  "tests/**/*.py",
  "tests/**/*.json",
  "tests/**/*.txt",
  "doc/**/*.rst",
  "doc/**/*.py",
  "LICENSES/*.txt",
]

[tool.hatch.build.targets.wheel]
packages = ["src/auto_intersphinx"]

[tool.isort]
profile = "black"
line_length = 88
order_by_type = true
lines_between_types = 1

[tool.black]
line-length = 88

[tool.coverage.run]
relative_files = true

[tool.pytest.ini_options]
addopts = [
  "--cov=auto_intersphinx",
  "--cov-report=term-missing",
  "--import-mode=append",
]
